--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "hello-world-app",
-  "version": "1.0.0",
-  "description": "Simple Hello World web application",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "dev": "node index.js"
-  },
-  "keywords": ["hello-world", "express"],
-  "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "express": "^4.18.2"
-  }
+    "name": "hello-world-app",
+    "version": "1.0.0",
+    "description": "Simple Hello World web application",
+    "main": "index.js",
+    "scripts": {
+        "start": "node index.js",
+        "dev": "node index.js"
+    },
+    "keywords": [
+        "hello-world",
+        "express"
+    ],
+    "author": "",
+    "license": "MIT",
+    "dependencies": {
+        "express": "^4.18.2",
+        "@supabase/supabase-js": "^2.39.0"
+    }
 }
