Add admin panel with Supabase auth and subscription management
- Backend: Auth middleware with JWT verification and admin email allowlist
- Backend: Admin API routes for users and subscription plans (CRUD)
- Frontend: Modern login page with glassmorphism design
- Frontend: Full-featured dashboard with user management and plan CRUD
- Database: Comprehensive setup guide with SQL migrations
- UI: Dark theme with responsive design and smooth animations
- Docs: Updated README and environment configuration

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ PORT=3000
 # https://app.supabase.com/project/_/settings/api
 SUPABASE_URL=your-project-url.supabase.co
 SUPABASE_ANON_KEY=your-anon-key-here
+
+# Admin Configuration
+# Comma-separated list of admin email addresses
+ADMIN_EMAILS=admin@example.com,admin2@example.com
