--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ PORT=3000
 # https://app.supabase.com/project/_/settings/api
 SUPABASE_URL=your-project-url.supabase.co
 SUPABASE_ANON_KEY=your-anon-key-here
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
 
 # Admin Configuration
 # Comma-separated list of admin email addresses
