--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "license": "MIT",
     "dependencies": {
         "express": "^4.18.2",
-        "@supabase/supabase-js": "^2.39.0"
+        "@supabase/supabase-js": "^2.39.0",
+        "stripe": "^14.10.0",
+        "@paypal/checkout-server-sdk": "^1.0.3"
     }
 }
