WIP: Instagram widget integration - Phase 1 infrastructure
- Database: SQL schema for social_connections, widgets, widget_embeds, widget_cache
- Security: AES-256-GCM encryption library for access tokens
- Meta OAuth: Authorization flow, token exchange, page fetching
- Instagram API: Business account media fetching via Graph API
- Instagram oEmbed: Personal account public post embedding
- Dependencies: Added axios for API calls
- Documentation: Database setup guide
- Environment: Added Meta and encryption config placeholders

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,13 @@ SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
 # Admin Configuration
 # Comma-separated list of admin email addresses
 ADMIN_EMAILS=admin@example.com,admin2@example.com
+
+# Meta (Facebook/Instagram) Configuration
+# Get these from https://developers.facebook.com
+META_APP_ID=your-app-id
+META_APP_SECRET=your-app-secret
+META_REDIRECT_URI=https://a4addon.com/api/social/callback/facebook
+
+# Encryption (for access tokens)
+# Generate a strong 32+ character random string
+ENCRYPTION_KEY=your-32-character-or-longer-encryption-key
