--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "express": "^4.18.2",
         "@supabase/supabase-js": "^2.39.0",
         "stripe": "^14.10.0",
-        "@paypal/checkout-server-sdk": "^1.0.3"
+        "@paypal/checkout-server-sdk": "^1.0.3",
+        "axios": "^1.6.0"
     }
 }
